--- a/dev/stylus/demo.styl
+++ b/dev/stylus/demo.styl
@@ -22,19 +22,22 @@
 			position absolute
 			left 180px
 			top 38px
+			width 58px
+			height 44px
 			padding 0 10 30
 			&:hover
 				a
 					color #ff3c00
 				.hidden
 					opacity 1
+					height 178px
 					transform scale(1)
 				.icon
 					width 12px
 					height 12px
 					display inline-block
 					vertical-align top
-					background-position -137px -258px
+					background-position -137px -258px	
 			a
 				display block
 				font-size 13px
@@ -52,13 +55,14 @@
 				left -100px
 				top 44px
 				width 434px
-				height 178px
+				height 0px
 				border 1px solid #ebebeb
 				background white
 				box-shadow 4px 7px 16px rgba(0,0,0,.3)
 				transform-origin 30% 0
 				transition .3s linear
 				transform scale(.7)
+				overflow hidden
 				.arrow
 					position absolute
 					width 13px
@@ -85,7 +89,8 @@
 								color #555
 								margin 0 2px 0 6px
 								&:hover
-									color #ff3c00		
+									color #ff3c00
+			
 		.nav
 			.list
 				float left
@@ -401,6 +406,7 @@
 					vertical-align middle
 .main
 	width 100%
+	min-width 1300px
 	height 1250px
 	background rgb(246,246,246)
 	.content-box
@@ -1088,12 +1094,7 @@
 					padding 0 4px 2px 0
 					&:hover
 						text-decoration underline
-						color #ff3c00		
-// @keyframes left
-// 	0%
-// 		transform rotate(180deg)
-// 	100%
-// 		transform rotate(360deg)
+						color #ff3c00
 .fixed
 	display none
 	position fixed
